# Gestion_de_Empresas

./: README.md
Practica1/: Práctica MRP-I. 2003. Plantilla práctica evaluada (3) (1) - Copia - Copia - Copia - Copia - Copia.xlsx  Práctica MRP-I. Plantilla Ejemplo Apuntes.xls
Practica2/: Practica2.asv  Practica2.m  Practica2_2.m  Practica2_Victor_Gonzalez.asv  Practica2_Victor_Gonzalez.m  Practica2_Victor_Gonzalez_matriz_entera.m  prueba_no_sirve.m
Practica3/: Practica3_Busqueda_Aleatoria.m  Practica3_Busqueda_local.asv  Practica3_Busqueda_local.m  Practica3_Busqueda_local_mejor_vecino.m  Practica3_Busqueda_local_primer_mejor.m  a1.mlapp  app.mlapp
Practica4/: RecocidoSimulado.asv  RecocidoSimulado.m
Practica5/: Algoritmo_Genetico.asv  Algoritmo_Genetico.m
Practica_Competitiva/: CMakeLists.txt  P_competitiva.m  main.cpp  p_c1.m
Practica_Scheduling/: Practica_Scheduling.m
PruebasMATLAB/: app1.mlapp
